# Stony-Kangaroo

./: CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindGloox.cmake
src/: Logger.cpp  Logger.h  LoggerTest.cpp  Output.cpp  Output.h  PrintfBuffer.cpp  PrintfBuffer.h  XmppBuffer.cpp  XmppBuffer.h
